--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px white inset; }
  ============== */
 #main-container {height:100%; min-height:100%; height: auto !important;}
 
-.header-wrapper {position:fixed;background:#fff;z-index:9999;width:100%;}
+.header-wrapper {position:fixed;background:#fff; z-index:99;width:100%;}
 
 .login-status-wrapper {background:#7aa508; margin-bottom:1px; padding-top:5px; height:27px;}
 .login-status {color:#bbfb04; text-align:right;}
@@ -69,6 +69,18 @@ header nav ul li a {display:block; color:#050505; font-family: 'quicksandregular
 header nav ul li a {padding:0 10px;}
 header nav ul li a:hover {text-decoration:none;}
 header nav ul li a span {display:block; font-size:.5em; font-family: 'quicksandregular' !important;}
+
+.icon-ride {display:block; background:url('../images/page_template/icon_ride.png') no-repeat; margin:4px auto  6px; width:35px; height:30px;}
+.icon-ride:hover {display:block; background:url('../images/page_template/icon_ride_hover.png') no-repeat; margin:4px auto  6px; width:35px; height:30px;}
+.icon-ride_selected {display:block; background:url('../images/page_template/icon_ride_hover.png') no-repeat; margin:4px auto  6px; width:35px; height:30px;}
+
+.icon-passenger {display:block; background:url('../images/page_template/icon_passenger.png') no-repeat; margin:4px auto 6px; width:35px; height:30px;}
+.icon-passenger:hover {display:block; background:url('../images/page_template/icon_passenger_selected.png') no-repeat; margin:4px auto 6px; width:35px; height:30px;}
+.icon-passenger_selected {display:block; background:url('../images/page_template/icon_passenger_selected.png') no-repeat; margin:4px auto 6px; width:35px; height:30px;}
+
+.icon-abroad {display:block; background:url('../images/page_template/icon_abroad.png') no-repeat; margin:4px auto 4px; width:35px; height:32px;}
+.icon-abroad:hover {display:block; background:url('../images/page_template/icon_abroad_hover.png') no-repeat; margin:4px auto 4px; width:35px; height:32px;}
+.icon-abroad_selected {display:block; background:url('../images/page_template/icon_abroad_hover.png') no-repeat; margin:4px auto 4px; width:35px; height:32px;}
 
 .line-separator {border-top:2px solid #c2c2c1; width:1024px;}
 
@@ -118,7 +130,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .red				{color:red}
 .arial				{font-family:Arial,sans-serif}
 .textleft			{text-align:left}
-.textright   		{text-align:right}
+.textright   			{text-align:right}
 .textcenter			{text-align:center}
 .show				{display:block; visibility:visible}
 .dispalyTable		{display:table}
@@ -319,7 +331,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .btn-create-lift:hover {text-decoration:none;}
 
 .lift-listing ul {/*width:850px;*/}
-.lift-listing ul li { float:left; background: #f2f1f0; border-radius:5px; margin: 0 8px 33px 0; width:250px;}
+.lift-listing ul li { float:left; background: #f2f1f0; border-radius:5px; margin: 0 47px 30px 0; width:250px;}
 .lift-listing ul li:nth-child(4n+4) { margin-right: 0;}
 .lift-listing ul li p {color:#678222; padding: 5px 8px;}
 .lift-listing ul li div {margin:7px 10px}
@@ -411,9 +423,9 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .passenger-view ul li {float:left;}
 
 .passenger-listing {margin-top:20px;}
-.passenger-listing ul {width:850px}
-.passenger-listing ul li {background:#f0efee; text-align:center; margin: 0 47px 30px 0; padding:10px; width:200px;}
-.passenger-listing ul li:nth-child(3n+3) { margin-right: 0;}
+.passenger-listing ul {/*width:850px*/}
+.passenger-listing ul li {background:#f0efee; text-align:center; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; margin: 0 47px 30px 0; padding:10px; width:200px;}
+.passenger-listing ul li:nth-child(4n+4) { margin-right: 0;}
 .passenger-listing ul li a {color:#000;}
 .passenger-listing ul li a:hover {text-decoration:none;}
 .passenger-listing ul li span {display:block; text-align:left; color:#678222; padding:4px 0;}
