--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,8 +247,8 @@ footer .pull-right .fl span:last-child {color:#678222;}
 
 .video {padding-top:55px;}
 .home-features {font-size:1.3em; margin:70px auto; width:710px;}
-.home-features h3 {text-align:center; text-transform:uppercase;}
-.home-features ul li {float:left; background:#fff; box-shadow:3px 3px 10px #cacaca; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; margin-bottom:50px; padding:5px; width:300px;}
+.home-features h2 {text-align:center; text-transform:uppercase; text-shadow:2px 2px 5px #fff, -2px -2px 5px #fff;}
+.home-features ul li {float:left; background:#e9fdb5; box-shadow:3px 3px 10px #cacaca; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; margin-bottom:50px; padding:5px; width:300px;}
 .home-features ul li:nth-child(2n+2) {float:right;}
 .home-features ul li i {float:left; margin-right:10px;}
 .home-features ul li:nth-child(1) i {display:block; background: url('../images/page_template/home_icon.png') no-repeat; width:71px; height:70px;}
@@ -256,7 +256,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .home-features ul li:nth-child(3) i {display:block; background: url('../images/page_template/home_icon.png') no-repeat 0 -140px; width:71px; height:70px;}
 .home-features ul li:nth-child(4) i {display:block; background: url('../images/page_template/home_icon.png') no-repeat 0 -210px; width:71px; height:70px;}
 
-.feedback { font-size:2em; text-align:center; position:relative; /* height:180px; */ padding-top:50px;}
+.feedback { font-size:1.8em; text-align:center; position:relative; /* height:180px; */ padding-top:50px;}
 .feedback .feedback-message:first-child { display:block; }
 .feedback .feedback-message { position:absolute; display:none; width:100%;}
 .feedback-message span {display:block; text-align:left; margin-top:10px;}
@@ -353,7 +353,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 #booking ul li div.seat-taken label:first-child {margin-left:0;}
 #booking ul li div label {margin-right:16px; width: 65px;}
 #booking ul li label, #quick_booking form ul li span {display:block; float:left;}
-#booking ul li label {width:120px;}
+#booking ul li label {float:left; width:120px;}
 #booking ul li textarea {resize:none; height:100px;}
 
 
@@ -627,7 +627,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 
 .create-lift form ul li div input[type="checkbox"] {margin-top:3px;}
 
-.create-lift-checkbox {position: relative; background: url('../images/page_template/checkbox.png') no-repeat 0 0; display: block; top: 3px; width: 26px; height: 26px; cursor:pointer; z-index: 1;}
+.create-lift-checkbox {position: relative; float:left; background: url('../images/page_template/checkbox.png') no-repeat 0 0; display: block; top: 3px; width: 26px; height: 26px; cursor:pointer; z-index: 1;}
 .create-lift-checkbox input[type="checkbox"]{ margin: 0; position: absolute; z-index: 2; cursor: pointer; outline: none; opacity: 0; _noFocusLine: expression(this.hideFocus=true); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter: alpha(opacity=0); -khtml-opacity: 0; -moz-opacity: 0; }
 .create-lift-checkbox.selected{ background: url('../images/page_template/checkbox.png') no-repeat 0 -26px; }
 
