--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
 	Author: Aldrin Dio
 	Description: Customize theme
  ============================= */
-
 * {margin:0; padding:0;}
 html, body {background:#fdfdfb; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size:12px; margin:0; padding:0; height:100%; width:100%;} 
 ul {list-style:none; margin:0; padding:0;}
@@ -183,7 +182,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 }
 .btn-advance:hover {color:#000; text-decoration:none;}
  
-.slideshow {margin-top:10px;}
+.slideshow {margin-top:110px;}
 .slideshow ul { position: relative; list-style: none; overflow: hidden; width: 100%; padding: 0; margin: 0; height:555px;}
 .slideshow ul li { /*-webkit-backface-visibility: hidden; position: absolute; display: none;*/ width: 100%; left: 0; top: 0; }
 .slideshow ul li:first-child { position: relative; display: block; float: left; }
@@ -246,8 +245,8 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .event-detail p {background:#000; padding:5px 5px; width:190px;}
 
 .video {padding-top:55px;}
-.home-features {font-size:1.3em; margin:70px auto; width:710px;}
-.home-features h2 {text-align:center; text-transform:uppercase; text-shadow:2px 2px 5px #fff, -2px -2px 5px #fff;}
+.home-features {font-size:1.3em; margin:0 auto; width:710px;}
+.home-features h3 {text-align:center; text-transform:uppercase; text-shadow:2px 3px 15px #000;}
 .home-features ul li {float:left; background:#e9fdb5; box-shadow:3px 3px 10px #cacaca; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; margin-bottom:50px; padding:5px; width:300px;}
 .home-features ul li:nth-child(2n+2) {float:right;}
 .home-features ul li i {float:left; margin-right:10px;}
@@ -256,17 +255,17 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .home-features ul li:nth-child(3) i {display:block; background: url('../images/page_template/home_icon.png') no-repeat 0 -140px; width:71px; height:70px;}
 .home-features ul li:nth-child(4) i {display:block; background: url('../images/page_template/home_icon.png') no-repeat 0 -210px; width:71px; height:70px;}
 
-.feedback { font-size:1.8em; text-align:center; position:relative; padding-top:35px;}
+.feedback { font-size:1.8em; text-align:center; position:relative; padding-top:15px;}
 .feedback .feedback-message:first-child { display:block; }
 .feedback .feedback-message { position:absolute; display:none; width:100%;}
 .feedback-message span {display:block; text-align:left; margin-top:10px;}
 .feedback .fl {margin-left:10px;}
 .feedback .f-left {vertical-align:top}
 .feedback .f-right {vertical-align:top; margin-top:25px;}
-.feedback-message p {position:relative; font-style:italic; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; padding:10px 10px; /*width:450px;*/}
+.feedback-message p {position:relative; font-style:italic; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; padding:0 10px; /*width:450px;*/}
 .feedback-message img {position:absolute; bottom:-9px; left:5px;}
 
-.subscription {color:#678222; text-align:center; margin:90px 0 180px;}
+.subscription {color:#678222; text-align:center; margin-bottom:40px;}
 .subscription h3 {color:#000; text-transform:uppercase; text-shadow:2px 3px 15px #000;}
 .subscription a {color:#678222;}
 .subscription a:hover {text-decoration:none;}
